Fixes pmc error text wrapping, updates header section gutter width on text change, stops reseting selection on mark clear to prevent scroll jumping for long expressions

--- a/client/src/app/routes/dataset/code-editor/code-editor.component.scss
+++ b/client/src/app/routes/dataset/code-editor/code-editor.component.scss
@@ -348,6 +348,7 @@ expression-list {
 
 .convert-to-lua-btn {
     margin-left: 8px;
+    margin-right: 8px;
 }
 
 ::ng-deep .mat-select-panel {
